inject.sh without VAC error

--- a/cat_autoexec_textmode.cfg
+++ b/cat_autoexec_textmode.cfg
@@ -5,7 +5,8 @@ cat_aimbot_enabled "1"
 cat_aimbot_aimkey_mode "0"
 cat_aimbot_auto_unzoom "1"
 cat_aimbot_auto_zoom "1"
-cat_aimbot_ignore_hoovy "1"
+cat_aimbot_ignore_hoovy 0
+cat_ignore_taunting 0
 cat_aimbot_proj_vispred "1"
 cat_aimbot_proj_fovpred "1"
 cat_aimbot_ignore_cloak "0"
