--- a/cat_autoexec_textmode.cfg
+++ b/cat_autoexec_textmode.cfg
@@ -31,7 +31,8 @@ cat_autojoin_class 2
 cat_autotaunt "1"
 cat_autotaunt_chance 16
 cat_chat_log 1
-cat_name_ipc "cat-bot %%"
+cat_name_ipc "cat-bot %% EX"
+cat_die_if_vac 1
 
 // This is disabled by default, but you might want to enable it if you run many bots
 // Prevents bots from stacking on one server
