--- a/cat_autoexec_textmode.cfg
+++ b/cat_autoexec_textmode.cfg
@@ -5,11 +5,13 @@ cat_aimbot_enabled "1"
 cat_aimbot_aimkey_mode "0"
 cat_aimbot_auto_unzoom "1"
 cat_aimbot_auto_zoom "1"
-cat_aimbot_ignore_hoovy 0
-cat_ignore_taunting 0
-cat_aimbot_proj_vispred "1"
-cat_aimbot_proj_fovpred "1"
+cat_aimbot_projectile 0
 cat_aimbot_ignore_cloak "0"
+cat_aimbot_zoomed 1
+
+// Targeting settings
+cat_aimbot_ignore_hoovy 1
+cat_ignore_taunting 1
 
 // Spam
 cat_spam "1"
@@ -17,11 +19,8 @@ cat_spam_delay "20000"
 cat_spam_file "botspam"
 
 // Misc settings
-cat_removecond_bleeding "1"
-cat_removecond_fire "1"
 cat_fast_vischeck "1"
 cat_nopush_enabled "1"
-cat_infinite_packs 1
 
 // Bot specific commands
 cat_wb_leave_if_empty 1
@@ -31,16 +30,14 @@ cat_autojoin_class 2
 cat_autotaunt "1"
 cat_autotaunt_chance 16
 cat_chat_log 1
-cat_name_ipc "cat-bot %% EX"
+cat_name_ipc "cat-bot %%"
 cat_die_if_vac 1
 
 // This is disabled by default, but you might want to enable it if you run many bots
 // Prevents bots from stacking on one server
-//cat_wb_population_control 2
+// cat_wb_population_control 2
 
 // Start queueing
 cat_wb_replay
 cat_ipc_connect
-cat_debug_abandon
-cat_debug_casual
 cat_spam_reload
