--- a/cat_autoexec_textmode.cfg
+++ b/cat_autoexec_textmode.cfg
@@ -33,9 +33,13 @@ cat_chat_log 1
 cat_name_ipc "cat-bot %%"
 cat_die_if_vac 1
 
+cat_cbu 1
+cat_cbu_random_votekicks 1
+
 // This is disabled by default, but you might want to enable it if you run many bots
 // Prevents bots from stacking on one server
-// cat_wb_population_control 2
+// cat_cbu_abandon_if_humans_lte 2
+// cat_cbu_abandon_if_bots_gte 4
 
 // Start queueing
 cat_wb_replay
