--- a/cat_autoexec_textmode.cfg
+++ b/cat_autoexec_textmode.cfg
@@ -35,6 +35,7 @@ cat_die_if_vac 1
 
 cat_cbu 1
 cat_cbu_random_votekicks 1
+cat_votelog 1
 
 // This is disabled by default, but you might want to enable it if you run many bots
 // Prevents bots from stacking on one server
