--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,14 @@ cathook-location
 cathook-ipc-server
 cathook-ipc-web-panel
 account-generator
-cathook/*
+cathook
+just-disable-vac
 inject.log
 core
 forever/node_modules
 build
 build-debug
 kisak
-
 users
-
 steams
-
 package-lock\.json
