Remove dependency on accgen related things.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ cathook-location
 cathook-ipc-server
 cathook-ipc-web-panel
 account-generator
+catbot-database
 cathook
 just-disable-vac
 inject.log
